# Huxley

./: .gitignore  IDEAS.md  ISSUES.md  PLAN.md  README.md  ROADMAP.md  _run_selfmod_tests.py  pyproject.toml  test_adev.py  test_alpha_recovery.py  test_beta_recovery.py  test_board_clear.py  test_mcp_bridge.py  test_openai_api.py  test_openai_api_live.py  test_openai_client_and_router.py  test_patch_cli.py  test_project_materialization.py  test_scheduler_concurrency.py  test_scheduler_round_robin.py  test_scheduler_router_reuse.py  test_swarm_delegation.py  test_swarm_discovery_refresh.py  test_tool_builtins.py  test_tool_decorator.py  test_tool_engine.py  test_tool_registry.py  test_tools_e2e.py  test_validator.py  test_web_research_fetch.py
harness/: cli.py  config.py
harness/adev/: __init__.py  engine.py
harness/board/: __init__.py  __main__.py  core.py  lifecycle.py  serve.py
harness/caste/: _base.py  alpha.py  apfeld.py  beta.py  gamma.py
harness/cloud/: endpoint.py  router.py
harness/comms/: __init__.py  message.py  remote.py  router.py
harness/daemon/: __main__.py  lifecycle.py  scheduler.py  server.py
harness/memory/: __init__.py  memq_graph.py  persistence.py  vector_db.py  vk_cache.py
harness/projects/: __init__.py  manager.py
harness/selfmod/: introspect.py  patcher.py  restart.py  validator.py
harness/server/: inference.py
harness/skill/: loader.py  registry.py
harness/swarm/: discovery.py  peer.py
harness/tool/: __init__.py  decorator.py  engine.py  mcp_bridge.py  registry.py
harness/web_research/: __init__.py  fetch.py  search.py  (+2 more)
(+8 files in other folders)
